<?xml version="1.0"?>
<package format="2">
	<name>dr_param</name>
	<version>2.0.1</version>
	<description>Load complicated structures from YAML.</description>
	<license>Apache v2.0</license>
	<author email="maarten@de-vri.es">Maarten de Vries</author>
	<maintainer email="maarten@de-vri.es">Maarten de Vries</maintainer>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>fmt</build_depend>
	<depend>estd</depend>
	<depend>dr_util</depend>
	<depend>yaml-cpp</depend>
	<depend>catch2</depend>
</package>
